--- a/README.textile
+++ b/README.textile
@@ -14,6 +14,8 @@ h2. Dependencies
 
 @sudo gem install rack sinatra@
 
+If you want to be able to run the project's tests, you'll also need to @sudo gem install httparty@, but this is not a dependency for using FakeTTP.
+
 h2. Installation
 
 FakeTTP uses "Sinatra":http://sinatra.rubyforge.org/ and "Rack":http://rack.rubyforge.org/, so can be installed on any Rack-compatible server. The easiest way is probably to use "Passenger":http://www.modrails.com/ (mod_rails) with Apache.
@@ -44,17 +46,17 @@ h2. Usage
 
 h3. Resetting
 
-To reset FakeTTP (ie remove all expectations and errors), make an HTTP POST request to @http://httpfake.local/reset@.
+To reset FakeTTP (ie remove all expectations and errors), make an HTTP POST request to @http://fakettp.local/reset@.
 
 h3. Setting expectations
 
-To create a new expectation, make an HTTP POST request to @http://httpfake.local/expect@, with a _Content-Type_ header of 'text/plain' and the request data containing a Ruby block to execute.
+To create a new expectation, make an HTTP POST request to @http://fakettp.local/expect@, with a _Content-Type_ header of 'text/plain' and the request data containing a Ruby block to execute.
 
 The supplied code should be in the following format, and will generally consist of a number of assertions on the request, followed by creation of the response to return to the application under test.
 
 <pre><code>
   expect "GET of /foo" do
-    request.host.should == 'httpfake.local'
+    request.host.should == 'fakettp.local'
     request.path_info.should == '/foo'
   
     content_type 'text/plain'
@@ -68,7 +70,7 @@ The expectation code has access to the underlying Sinatra/Rack stuff (this will 
 
 h3. Verifying
 
-To verify that all expectations have been met, make an HTTP GET request to @http://httpfake.local/verify@.
+To verify that all expectations have been met, make an HTTP GET request to @http://fakettp.local/verify@.
 
 If all is well, the response will be a _200 OK_ with a body of 'OK'. Otherwise the status will be _400 Bad Request_, with a list of failures in the body. The failure messages include the complete details of the unexpected request that was received, to assist debugging.
 
