--- a/README.textile
+++ b/README.textile
@@ -18,6 +18,14 @@ If you want to be able to run the project's tests, you'll also need to @sudo gem
 
 h2. Installation
 
+Either download the latest snapshot of the project using the "Download" button above, or clone using git:
+
+@git clone git://github.com/kerryb/fakettp.git@
+
+If you're stuck behind a firewall that blocks git (port 9418), you can use HTTP instead:
+
+@git clone http://github.com/kerryb/fakettp.git@
+
 FakeTTP uses "Sinatra":http://sinatra.rubyforge.org/ and "Rack":http://rack.rubyforge.org/, so can be installed on any Rack-compatible server. The easiest way is probably to use "Passenger":http://www.modrails.com/ (mod_rails) with Apache.
 
 Once you've installed Passenger, create a virtual host along these lines:
