Started creating dashboard

--- a/README.textile
+++ b/README.textile
@@ -134,3 +134,4 @@ h2. To Do
 * Check install/run behaviour when development dependencies are not installed
 * Provide Ruby API to set expectations etc
 * Return the expected content type even if expectation fails
+* Add html view to aid debugging
