--- a/README.textile
+++ b/README.textile
@@ -92,6 +92,10 @@ To have FakeTTP respond to multiple hostnames, create the appropriate hosts entr
 
 h2. Change log
 
+0.2.4 (25 Mar 2009)
+
+* Fixed a bug which caused expectations to be run in the wrong order if there were more than nine of them.
+
 0.2.3 (19 Mar 2009)
 
 * Fixed a bug where expectations were being overwritten on Linux due to Dir.entries not returning results in the expected order
