--- a/README.textile
+++ b/README.textile
@@ -92,6 +92,10 @@ To have FakeTTP respond to multiple hostnames, create the appropriate hosts entr
 
 h2. Change log
 
+0.2.4.1 (5 May 2009)
+
+* Temporarily depend on edge version of Sinatra, to gain Rack 1.0 compatibility.
+
 0.2.4 (25 Mar 2009)
 
 * Fixed a bug which caused expectations to be run in the wrong order if there were more than nine of them.
