--- a/README.rdoc
+++ b/README.rdoc
@@ -198,3 +198,4 @@ expectation, and just put the return value on the last line of the _expect_ bloc
 * Allow user-specific helper files in installation dir
 * Provide Ruby API to set expectations etc
 * Return the expected content type even if expectation fails
+* Highlight failed lines in console
