--- a/README.rdoc
+++ b/README.rdoc
@@ -33,15 +33,13 @@ You can install FakeTTP anywhere that your web server user can see it:
 
   fakettp install <directory> <hostname>
 
-Set _hostname_ to the host you want to use for FakeTTP control requests
+Set _hostname_ to the host you want to use for FakeTTP control requests (the
+examples below use <tt>fakettp.local</tt>).
 
 You can install multiple copies
 and run them independently by using different directories and hostnames (for
 example on a CI server to prevent clashes when building multiple projects
 in parallel).
-
-The examples below assume that all fakettp hostnames end with
-<tt>fakettp.local</tt>.
 
 === Point your web server at the directory
 
@@ -51,7 +49,6 @@ the correct directory. For example, using Passenger[http://www.modrails.com/]
 
   <VirtualHost *:80>
     ServerName fakettp.local
-    ServerAlias *.fakettp.local
     ServerAlias *.fake.local
     DocumentRoot "/path/to/fakettp/public"
     <directory "/path/to/fakettp/public">
@@ -61,16 +58,16 @@ the correct directory. For example, using Passenger[http://www.modrails.com/]
     </directory>
   </VirtualHost>
 
-This will make FakeTTP handle requests to any hosts ending with
-<tt>.fake.local</tt>. If you want to simulate other hosts, add more aliases.
+The <tt>ServerAlias</tt> line means that FakeTTP will attempt to simulate
+all requests that match the supplied pattern. You can add as many of these
+as necessary.
 
-Now make sure <tt>fakettp.local</tt> and any simulated hosts resolve to
-127.0.0.1 (assuming you're
-running the simulator on the same machine as the application under test), eg
-by adding the following line to <tt>/etc/hosts</tt>:
+Then make sure the simualtor hostname and any simulated hosts all resolve to
+127.0.0.1 (assuming you're running the simulator on the same machine as the
+application under test), eg by adding the following to <tt>/etc/hosts</tt>:
 
   127.0.0.1	fakettp.local
-  127.0.0.1 some-app.fake.local
+  127.0.0.1	some-host.fake.local
 
 === IMPORTANT: security note
 
@@ -142,7 +139,19 @@ Point your browser at http://fakettp.local/
 
 Currently this is very basic, just showing the expectations from the last run.
 
+=== Multiple faked hosts
+
+To have FakeTTP respond to multiple hostnames, create the appropriate hosts
+entries. If you're using name-based virtual hosts in Apache, add a
+_ServerAlias_ entry to the virtual host config, under the _ServerName_ line, eg:
+
+  ServerAlias foo.com bar.com
+
 == Change log
+
+0.3.0 (19 May 2009)
+
+* Fixed some issues with multiple hosts
 
 0.3.0 (18 May 2009)
 
